src/styles/buttons-galore.scss
input {
  width: 100%;
}

.options {
  display: flex;
  gap: 10px;
  margin-top: 10px;

  select {
    flex: 1;
    min-width: 0;
  }
}

.buttons {
  display: flex;
  flex-wrap: wrap;
  gap: 0px;
  margin-top: 10px;
  justify-content: center;

  img {
    animation: appear .15s;
    opacity: 0.1;

    &:hover {
      scale: 1.5;

      &:nth-child(even) {
        rotate: 2deg;
      }

      &:nth-child(odd) {
        rotate: -2deg;
      }
    }
  }
}

window:hover .tooltip {
  opacity: 1;
}

@keyframes appear {
  0% { opacity: 0.1; transform: scale(0.5); }
  50% { transform: scale(1, 1.25); }
  100% { opacity: 1; }
}

